--- a/root/style/components/time.scss
+++ b/root/style/components/time.scss
@@ -7,6 +7,7 @@
         width: 40px;
         transition: width 0.5s;
         margin: 0;
+        cursor: pointer;
     }
     &.show {
         input {
@@ -32,7 +33,7 @@
         transform: perspective(800px) rotateX(-90deg);
         transform-origin: top;
         transition: all 0.5s linear;
-        z-index: 10;
+        z-index: 2;
         overflow: hidden;
         height: 180px;
         display: flex;
