--- a/root/style/components/home.scss
+++ b/root/style/components/home.scss
@@ -43,6 +43,9 @@
                 right: 0;
                 text-align: center;
                 padding: 5px;
+                .author {
+                    padding-right: 10px;
+                }
             }
             .title {
                 color: $text-light;
