--- a/root/style/main.scss
+++ b/root/style/main.scss
@@ -140,3 +140,38 @@ input.error {
         background-position: center;
     }
 }
+
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {    
+    body {
+        font-size: 36px;
+    }
+    .app {
+        .app-body {
+            position: relative;
+            display: block;
+            height: 100vh;
+            .site-body {
+                position: absolute;
+                bottom: 80px;
+                right: 0;
+                left: 0;
+                top: 0;
+                height: auto;
+                .open-content {
+                    position: absolute;
+                    bottom: 0;
+                    top: 60px;
+                    right: 0;
+                    left: 0;
+                    margin-bottom: 10px;
+                    height: auto;
+                }
+            }
+            .navigation {
+                position: fixed;
+                bottom: 0;
+                width: 100%;
+            }
+        }
+    }
+}
